feat: extend RightsGate challenge workflow
